Customized bootstrap breakpoint for hamburger menu

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is a Dean Wang's portfolio page." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="static/css/bootstrap.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -70,8 +70,7 @@
                 <h1 class="cursive">Simple, One Page Design</h1>
                 <h4>A free landing page theme with video background</h4>
                 <hr>
-                <a href="#video-background" id="
-                " data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
+                <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
             </div>
         </div>
         <video autoplay="" loop="" muted class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="static/pictures/benchwarmer_poster.png" id="video-background">
