--- a/static/css/base-styles.css
+++ b/static/css/base-styles.css
@@ -3,20 +3,20 @@
 }
 
 .profile-img{
-	width: 55px;
+	width: 57px;
 	height: auto;
+}
+
+a.page-scroll{
+	font-size: 1.3em !important;
 }
 
 a.navbar-brand.page-scroll{
 	padding-top: 0.1em !important;
-	font-size: 1.5em !important;
+	font-size: 2em !important;
 }
 
-a.page-scroll{
-	font-size: 1.2em !important;
-}
-
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 768px) {
 	/* For mobile phones: */
 	#nav-desktop{
 		display: none;
@@ -37,11 +37,15 @@ a.page-scroll{
 
 	a.navbar-brand.page-scroll{
 		padding-top: 0.1em !important;
-		font-size: 1.3em !important;
 	}
 
 	a.page-scroll{
 		font-size: 1em !important;
 	}
+
+	#toggle-video,#video-background{
+		display: none;
+	}
 }
+
 
