--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,13 +6,15 @@
     <meta name="description" content="This is a Dean Wang's portfolio page." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="static/css/bootstrap.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="static/css/base-styles.css" />
     <link rel="stylesheet" href="static/css/template-styles.css" />
   </head>
 <body>
+    <!-- navigation bar -->
 	 <nav id="topNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -22,53 +24,68 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first"><i class="ion-ios-analytics-outline"></i> Landing Zero</a>
+                <a class="navbar-brand page-scroll" href="#first"><span><img src="static/pictures/dean.png" alt="Dean" class="img-circle profile-img"><i class="ion-ios-pulse-strong"></i>Dean Wang</span></a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
-                <ul class="nav navbar-nav">
+                <ul id="nav-desktop" class="nav navbar-nav pull-right">
                     <li>
-                        <a class="page-scroll" href="#one">Intro</a>
+                        <a class="page-scroll" href="#one">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#two">Highlights</a>
+                        <a class="page-scroll" href="#two">Experience</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#three">Gallery</a>
+                        <a class="page-scroll" href="#three">Extracurricular</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#four">Features</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#last">Contact</a>
+                        <a class="page-scroll" href="#four">Contact</a>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
+                <ul id="nav-mobile" class="nav navbar-nav">
+                    <li>
+                        <a class="page-scroll" href="#one">Projects</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#two">Experience</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#three">Extracurricular</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#four">Contact</a>
+                    </li>
+                </ul>
+               <!--  <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" data-toggle="modal" title="A free Bootstrap video landing theme" href="#aboutModal">About</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </nav>
+    <!-- header -->
 	<header id="first">
         <div class="header-content">
             <div class="inner">
                 <h1 class="cursive">Simple, One Page Design</h1>
                 <h4>A free landing page theme with video background</h4>
                 <hr>
-                <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp; <a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
+                <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
             </div>
         </div>
-        <video autoplay="" loop="" muted class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Traffic-blurred2.jpg" id="video-background">
+        <video autoplay="" loop="" muted class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="static/pictures/benchwarmer_poster.png" id="video-background">
+            <!-- Video by Noble, retrieved from https://www.youtube.com/watch?v=RBr4f_raIvU.
+                 Modified by Dean Wang -->
             <source src="static/videos/halo5.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
         </video>
     </header>
 	{% block content %}
 	You should never see this content.  It should be replaced.
 	{% endblock %}
+    <!-- footer -->
 	<footer id="footer">
         <div class="container-fluid">
-            <div class="row">
+          <!--   <div class="row">
                 <div class="col-xs-6 col-sm-3 column">
                     <h4>Information</h4>
                     <ul class="list-unstyled">
@@ -106,9 +123,19 @@
                       <li><a rel="nofollow" href="" title="Dribble"><i class="icon-lg ion-social-dribbble-outline"></i></a></li>
                     </ul>
                 </div>
+            </div> -->         
+            <div class="row">
+                <div class="col-xs-12 text-muted text-center">
+                    ©2016&nbsp;&nbsp;Designed by Dean Wang
+                </div>
             </div>
-            <br/>
-            <span class="pull-right text-muted small"><a href="http://www.bootstrapzero.com">Landing Zero by BootstrapZero</a> ©2015 Company</span>
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <ul class="list-inline">
+                      <li><a rel="nofollow" href="https://www.linkedin.com/in/deanwong0805" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                    </ul>
+                </div>
+            </div>  
         </div>
     </footer>
     <div id="galleryModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
@@ -124,7 +151,7 @@
         </div>
         </div>
     </div>
-    <div id="aboutModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+   <!--  <div id="aboutModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
         <div class="modal-content">
         	<div class="modal-body">
@@ -143,8 +170,8 @@
         	</div>
         </div>
         </div>
-    </div>
-    <div id="alertModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+    </div> -->
+<!--     <div id="alertModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-sm">
         <div class="modal-content">
         	<div class="modal-body">
@@ -156,7 +183,7 @@
         	</div>
         </div>
         </div>
-    </div>
+    </div> -->
     <!--scripts loaded here from cdn for performance -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
