--- a/templates/index.html
+++ b/templates/index.html
@@ -3,22 +3,82 @@
 	<section class="bg-primary" id="one">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
-                    <h2 class="margin-top-0 text-primary">Built On The Bootstrap Grid</h2>
-                    <br>
-                    <p class="text-faded">
+                <div class="col-lg-12 text-center">
+                    <h2 class="margin-top-0 text-primary">Projects</h2>
+                    <hr class="primary">
+                    <!-- <p class="text-faded">
                         Bootstrap's responsive grid comes in 4 sizes or "breakpoints": tiny (xs), small(sm), medium(md) and large(lg). These 4 grid sizes enable you create responsive layouts that behave accordingly on different devices.
                     </p>
-                    <a href="#three" class="btn btn-default btn-xl page-scroll">Learn More</a>
+                    <a href="#three" class="btn btn-default btn-xl page-scroll">Learn More</a> -->
+                    <ul class="nav nav-tabs" id="my-projects">
+                        <li class="active"><a data-toggle="tab" href="#all-projects">All</a></li>
+                        <li><a data-toggle="tab" href="#ux-projects">UX</a></li>
+                        <li><a data-toggle="tab" href="#ui-projects">UI</a></li>
+                        <li><a data-toggle="tab" href="#web-applications">Web Apps</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <!-- All projects -->
+                        <div id="all-projects" class="tab-pane fade in active">
+                            <div class=" row">
+                                 <div class="col-xs-12 col-md-4 portfolio-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AAACF-501">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class=" row">                          
+                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="ux-projects" class="tab-pane fade">
+                            
+                        </div>
+                        <div id="ui-projects" class="tab-pane fade">
+                            
+                        </div>
+                        <div id="web-applications" class="tab-pane fade">
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section id="two">
+    <section id="two" class="bg-white">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Flexible Layouts</h2>
+                    <h2 class="margin-top-0 text-primary">Experience</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -127,10 +187,10 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid" id="four">
+    <section class="container-fluid bg-primary" id="four">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                <h2 class="text-center text-primary">Features</h2>
+                <h2 class="text-center text-primary">Extracurricular</h2>
                 <hr>
                 <div class="media wow fadeInRight">
                     <h3>Simple</h3>
@@ -184,7 +244,7 @@
             </div>
         </div>
     </section>
-    <aside class="bg-dark">
+    <!-- <aside class="bg-white">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2 class="text-primary">Get Started</h2>
@@ -213,12 +273,12 @@
                 </div>
             </div>
         </div>
-    </aside>
-    <section id="last">
+    </aside> -->
+    <section id="last" class="bg-white">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="margin-top-0 wow fadeIn">Get in Touch</h2>
+                    <h2 class="margin-top-0 wow fadeIn">Contact</h2>
                     <hr class="primary">
                     <p>We love feedback. Fill out the form below and we'll get back to you as soon as possible.</p>
                 </div>
