--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Dean's Portfolio</title>
@@ -24,35 +24,35 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first"><span><img src="static/pictures/dean.png" alt="Dean" class="img-circle profile-img"><i class="ion-ios-pulse-strong"></i>Dean Wang</span></a>
+                <a class="navbar-brand page-scroll nav-text" href=""><span><img src="static/pictures/dean.png" alt="Dean" class="img-circle profile-img"><i class="ion-ios-pulse-strong"></i>Dean Wang</span></a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul id="nav-desktop" class="nav navbar-nav pull-right">
                     <li>
-                        <a class="page-scroll" href="#one">Projects</a>
+                        <a class="page-scroll nav-text" href="#one">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#two">Experience</a>
+                        <a class="page-scroll nav-text" href="#two">Experience</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#three">Extracurricular</a>
+                        <a class="page-scroll nav-text" href="#three">Extracurricular</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#four">Contact</a>
+                        <a class="page-scroll nav-text" href="#four">Contact</a>
                     </li>
                 </ul>
                 <ul id="nav-mobile" class="nav navbar-nav">
                     <li>
-                        <a class="page-scroll" href="#one">Projects</a>
+                        <a class="page-scroll nav-text" href="#one">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#two">Experience</a>
+                        <a class="page-scroll nav-text" href="#two">Experience</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#three">Extracurricular</a>
+                        <a class="page-scroll nav-text" href="#three">Extracurricular</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#four">Contact</a>
+                        <a class="page-scroll nav-text" href="#four">Contact</a>
                     </li>
                 </ul>
                <!--  <ul class="nav navbar-nav navbar-right">
@@ -70,7 +70,7 @@
                 <h1 class="cursive">Simple, One Page Design</h1>
                 <h4>A free landing page theme with video background</h4>
                 <hr>
-                <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
+                <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl ">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">&nbsp;Get Started&nbsp;</a>
             </div>
         </div>
         <video autoplay="" loop="" muted class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="static/pictures/benchwarmer_poster.png" id="video-background">
