--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="margin-top-0 text-primary">Projects</h2>
-                    <hr class="primary">
+<!--                     <hr class="primary"> -->
                     <!-- <p class="text-faded">
                         Bootstrap's responsive grid comes in 4 sizes or "breakpoints": tiny (xs), small(sm), medium(md) and large(lg). These 4 grid sizes enable you create responsive layouts that behave accordingly on different devices.
                     </p>
@@ -19,40 +19,40 @@
                     <div class="tab-content">
                         <!-- All projects -->
                         <div id="all-projects" class="tab-pane fade in active">
-                            <div class=" row">
-                                 <div class="col-xs-12 col-md-4 portfolio-item">
+                            <div class="row">
+                                 <div class="col-xs-12 col-md-4 project-item">
                                     <br>
                                     <a href="#">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="AAACF-501">
                                     </a>
                                 </div>
-                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                <div class="col-xs-12 col-md-4 project-item">
                                     <br>
                                     <a href="#">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
                                     </a>
                                 </div>
-                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                <div class="col-xs-12 col-md-4 project-item">
                                     <br>
                                     <a href="#">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
                                     </a>
                                 </div>
                             </div>
-                            <div class=" row">                          
-                                <div class="col-xs-12 col-md-4 portfolio-item">
+                            <div class="row">                          
+                                <div class="col-xs-12 col-md-4 project-item">
                                     <br>
                                     <a href="#">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
                                     </a>
                                 </div>
-                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                <div class="col-xs-12 col-md-4 project-item">
                                     <br>
                                     <a href="#">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
                                     </a>
                                 </div>
-                                <div class="col-xs-12 col-md-4 portfolio-item">
+                                <div class="col-xs-12 col-md-4 project-item">
                                     <br>
                                     <a href="#">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
@@ -60,14 +60,56 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- UX projects -->
                         <div id="ux-projects" class="tab-pane fade">
-                            
+                            <div class="row">
+                                 <div class="col-xs-12 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AAACF-501">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
+                        <!-- UI projects -->
                         <div id="ui-projects" class="tab-pane fade">
-                            
+                            <div class="row">
+                                <div class="col-xs-12 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
+                        <!-- Web Apps -->
                         <div id="web-applications" class="tab-pane fade">
-                            
+                            <div class="row">
+                                 <div class="col-xs-12 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -79,7 +121,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="margin-top-0 text-primary">Experience</h2>
-                    <hr class="primary">
+                    <!-- <hr class="primary"> -->
                 </div>
             </div>
         </div>
@@ -106,7 +148,11 @@
                         <p class="text-muted">A mature, well-tested, stable codebase</p>
                     </div>
                 </div>
-            </div>
+            </div>   
+            <br><br>
+            <div class="text-center">
+                <a href="" class="btn btn-primary btn-xl my-button">My Resume</a>
+            </div>     
         </div>
     </section>
     <section id="three" class="no-padding">
@@ -191,7 +237,7 @@
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
                 <h2 class="text-center text-primary">Extracurricular</h2>
-                <hr>
+                <!-- <hr> -->
                 <div class="media wow fadeInRight">
                     <h3>Simple</h3>
                     <div class="media-body media-middle">
@@ -279,7 +325,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="margin-top-0 wow fadeIn">Contact</h2>
-                    <hr class="primary">
+                    <!-- <hr class="primary"> -->
                     <p>We love feedback. Fill out the form below and we'll get back to you as soon as possible.</p>
                 </div>
                 <div class="col-lg-10 col-lg-offset-1 text-center">
