Added new templates for projects

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -70,7 +70,7 @@
                 <h1 class="cursive">Simple, One Page Design</h1>
                 <h4>A free landing page theme with video background</h4>
                 <hr>
-                <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl ">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">&nbsp;Get Started&nbsp;</a>
+                <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl ">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">&nbsp;&nbsp;Get Started&nbsp;</a>
             </div>
         </div>
         <video autoplay="" loop="" muted class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="static/pictures/benchwarmer_poster.png" id="video-background">
