--- a/templates/_base.html
+++ b/templates/_base.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll nav-text" href=""><span><img src="static/pictures/dean.png" alt="Dean" class="img-circle profile-img"><i class="ion-ios-pulse-strong"></i>Dean Wang</span></a>
+                <a class="navbar-brand page-scroll nav-text" href="#first"><span><img src="static/pictures/dean.png" alt="Dean" class="img-circle profile-img"><i class="ion-ios-pulse-strong"></i>Dean Wang</span></a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul id="nav-desktop" class="nav navbar-nav pull-right">
@@ -69,7 +69,6 @@
             <div class="inner">
                 <h1 class="cursive">Simple, One Page Design</h1>
                 <h4>A free landing page theme with video background</h4>
-                <hr>
                 <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl ">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">&nbsp;&nbsp;Get Started&nbsp;</a>
             </div>
         </div>
