--- a/templates/_p-base.html
+++ b/templates/_p-base.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="static/css/base-styles.css" />
     <link rel="stylesheet" href="static/css/template-styles.css" />
+    <link rel="stylesheet" href="static/css/project-styles.css" />
   </head>
 <body>
     <!-- navigation bar -->
-	 <nav id="topNav" class="navbar navbar-default navbar-fixed-top">
+	<nav id="topNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar">
@@ -24,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll nav-text" href=""><span><img src="static/pictures/dean.png" alt="Dean" class="img-circle profile-img"><i class="ion-ios-pulse-strong"></i>Dean Wang</span></a>
+                <a class="navbar-brand page-scroll nav-text" href="index"><span><img src="static/pictures/dean.png" alt="Dean" class="img-circle profile-img"><i class="ion-ios-pulse-strong"></i>Dean Wang</span></a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul id="nav-desktop" class="nav navbar-nav pull-right">
@@ -58,25 +59,119 @@
             </div>
         </div>
     </nav>
-    <!-- header -->
-	<header id="first">
-        <div class="header-content">
-            <div class="inner">
-                <h1 class="cursive">Simple, One Page Design</h1>
-                <h4>A free landing page theme with video background</h4>
-                <hr>
-                <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl ">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">&nbsp;&nbsp;Get Started&nbsp;</a>
-            </div>
-        </div>
-        <video autoplay="" loop="" muted class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="static/pictures/benchwarmer_poster.png" id="video-background">
-            <!-- Video by Noble, retrieved from https://www.youtube.com/watch?v=RBr4f_raIvU.
-                 Modified by Dean Wang -->
-            <source src="static/videos/halo5.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
-        </video>
-    </header>
 	{% block content %}
 	You should never see this content.  It should be replaced.
 	{% endblock %}
+    <!-- More Projects -->
+    <section class="bg-primary" id="one">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="margin-top-0 text-primary">More Projects</h2>
+                    <ul class="nav nav-tabs" id="my-projects">
+                        <li class="active"><a data-toggle="tab" href="#all-projects">All</a></li>
+                        <li><a data-toggle="tab" href="#ux-projects">UX</a></li>
+                        <li><a data-toggle="tab" href="#ui-projects">UI</a></li>
+                        <li><a data-toggle="tab" href="#web-applications">Web Apps</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <!-- All projects -->
+                        <div id="all-projects" class="tab-pane fade in active">
+                            <div class="row">
+                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="aaacf">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AAACF-501">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
+                                    </a>
+                                </div>                        
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- UX projects -->
+                        <div id="ux-projects" class="tab-pane fade">
+                            <div class="row">
+                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="aaacf">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AAACF-501">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- UI projects -->
+                        <div id="ui-projects" class="tab-pane fade">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Web Apps -->
+                        <div id="web-applications" class="tab-pane fade">
+                            <div class="row">
+                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
 	<footer id="footer">
         <div class="container-fluid">
