--- a/templates/index.html
+++ b/templates/index.html
@@ -354,7 +354,8 @@
                         <div class="col-md-4 col-md-offset-4">
                             <label></label>
                             <br><br>
-                            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-lg my-button">Send<i class="ion-android-arrow-forward"></i></button>
+                            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-lg my-button">Send
+                            </button>
                             <br>
                             <br>
                             <div class="text-center">
