--- a/templates/index.html
+++ b/templates/index.html
@@ -28,32 +28,50 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="aore">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Facebook">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="ecommunity">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
                                     </a>
                                 </div>                        
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="umclinical">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="candc">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="dobbinIII">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="WeStock">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Forum">
                                     </a>
                                 </div>
                             </div>
@@ -69,8 +87,14 @@
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="aore">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Facebook">
                                     </a>
                                 </div>
                             </div>
@@ -80,14 +104,20 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="ecommunity">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="umclinical">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="WeStock">
                                     </a>
                                 </div>
                             </div>
@@ -97,14 +127,20 @@
                             <div class="row">
                                  <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="candc">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
-                                    <a href="#">
+                                    <a href="dobbinIII">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
+                                    </a>
+                                </div>
+                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                                    <br>
+                                    <a href="#">
+                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Forum">
                                     </a>
                                 </div>
                             </div>
