--- a/static/css/project-styles.css
+++ b/static/css/project-styles.css
@@ -21,3 +21,25 @@ img{
 	height:100%
 }
 
+.project-title>h1{
+	font-family: Georgia, serif !important;
+	font-style: italic !important;
+}
+
+.project-title>h3, h2{
+	font-family: Georgia, serif !important;
+}
+
+hr{
+	max-width: 100% !important;
+	margin-right: 0;
+	margin-left: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.my-role{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
