--- a/templates/candc.html
+++ b/templates/candc.html
@@ -1,41 +1,45 @@
 {% extends "templates/_p-base.html" %}
 {% block content %} 
 <!-- header -->
-    <header id="first" style="background-image: url('static/pictures/community.jpg')">
+    <header id="first" style="background-image: url('static/pictures/candc.jpg')">
         <div class="header-content">
-            <div class="inner project-title">
-                <h1>Ann Arbor Area Community Foundation</h1>
-                <h2>Office Communication System Design</h2>
+            <div class="inner">
+                <h1>Comfort and Climate</h1>
+                <h3>Website Application Development</h3>
             </div>
         </div>
     </header>
     <div class="bg-primary project-info">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-5">
-                    <h2>Overview</h2>
+                <div class="col-xs-12 col-sm-4">
+                    <h2>Project Overview</h2>
                     <hr>
-                    <h4>Ann Arbor Area Community Foundation (AAACF) is a non-profit organization dedicated to improve the lives of people in Washtenaw County. AAACF is front desk centered office and suffers from low efficiency in customer service. My team and I are to design the reception desk to improve customer service while also considering staff productivity and job satisfaction.</h4>
+                    <h4>Dr.Lars Junghans from Taubman College of Architecture and Urban Planning in University of Michigan received client request to develope a web application which can calculate and evaluate building construction in professional perspectives (sensitivity study, Meteo ratios and etc.). As a lead developer in the team, it is my duty to help achieve the goal.</h4>
                 </div>
-                <div class="col-xs-12 col-sm-2">
+                <div class="col-xs-12 col-sm-3">
                     <h2>Duration</h2>
                     <hr>
-                    <h4>Dec,2015-Apr,2016</h4>
+                    <h4>August, 2015 - Present</h4>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <h2>Role</h2>
                     <hr>
-                    <ul class="my-role">
-                        <li><h4>UX Designer</h4></li>
+                    <ul>
+                        <li>Project Manager</li>
+                        <li>Web Developer</li>
+                        <li>Backend</li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                    <h2>Methods</h2>
+                    <h2>Skills</h2>
                     <hr>
-                    <ul class="my-role">
-                        <li><h4>Background Research</h4></li>
-                        <li><h4>Interview</h4></li>
-                        <li><h4>Affinity Diagram</h4></li>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>Java Servlet</li>
+                        <li>HyperSQL database</li>              
                     </ul>
                 </div>
             </div>
@@ -51,7 +55,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Background Research</h3>
+                    <h3>C++ Code Translation</h3>
                 </div>
             </div>
             <div class="row">
@@ -65,14 +69,18 @@
             <br>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Interview Protocol</h3>
-                    <h4>AAAAAAAAAAAA</h4>
+                    <h3>Interface Prototype</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6">
+                    <img src="http://placehold.it/700x400" alt="bgResearch">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Affinity Diagram</h3>
+                    <h3>Backend Coding</h3>
                 </div>
             </div>
             <div class="row">
@@ -81,6 +89,13 @@
                 </div>
                 <div class="col-xs-6">
                     <h4>AAAAAAAAA</h4>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3>Beta Version</h3>
+                    <h4>URL</h4>
                 </div>
             </div>
         </div>
