--- a/templates/ecommunity.html
+++ b/templates/ecommunity.html
@@ -1,41 +1,43 @@
 {% extends "templates/_p-base.html" %}
 {% block content %} 
 <!-- header -->
-    <header id="first" style="background-image: url('static/pictures/community.jpg')">
+    <header id="first" style="background-image: url('static/pictures/ecommunity.jpg')">
         <div class="header-content">
-            <div class="inner project-title">
-                <h1>Ann Arbor Area Community Foundation</h1>
-                <h2>Office Communication System Design</h2>
+            <div class="inner">
+                <h1>E-Community</h1>
+                <h3>Website Design and Prototype</h3>
             </div>
         </div>
     </header>
     <div class="bg-primary project-info">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-5">
-                    <h2>Overview</h2>
+                <div class="col-xs-12 col-sm-4">
+                    <h2>Project Overview</h2>
                     <hr>
-                    <h4>Ann Arbor Area Community Foundation (AAACF) is a non-profit organization dedicated to improve the lives of people in Washtenaw County. AAACF is front desk centered office and suffers from low efficiency in customer service. My team and I are to design the reception desk to improve customer service while also considering staff productivity and job satisfaction.</h4>
+                    <h4>The Asian ratios in Ann Arbor as well as Ypsilanti is pretty high due to the international students and immigrants. However, Asians tend to group up and live in their unique circles due to the cultural differences in U.S, which caused information sharing problem such as selling used items and school course recommendations.</h4>
                 </div>
-                <div class="col-xs-12 col-sm-2">
+                <div class="col-xs-12 col-sm-3">
                     <h2>Duration</h2>
                     <hr>
-                    <h4>Dec,2015-Apr,2016</h4>
+                    <h4>September, 2015 - December, 2015</h4>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <h2>Role</h2>
                     <hr>
-                    <ul class="my-role">
-                        <li><h4>UX Designer</h4></li>
+                    <ul>
+                        <li>UX/UI Designer</li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
                     <h2>Methods</h2>
                     <hr>
-                    <ul class="my-role">
-                        <li><h4>Background Research</h4></li>
-                        <li><h4>Interview</h4></li>
-                        <li><h4>Affinity Diagram</h4></li>
+                    <ul>
+                        <li>Personas</li>
+                        <li>Scenario</li>
+                        <li>QOC Analysis</li>
+                        <li>Sketch</li>
+                        <li>Prototype</li>                 
                     </ul>
                 </div>
             </div>
@@ -51,7 +53,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Background Research</h3>
+                    <h3>Paper Prototype</h3>
                 </div>
             </div>
             <div class="row">
@@ -65,22 +67,13 @@
             <br>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Interview Protocol</h3>
-                    <h4>AAAAAAAAAAAA</h4>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h3>Affinity Diagram</h3>
+                    <h3>Digital Prototype</h3>
+                    <h4>URL</h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-6">
                     <img src="http://placehold.it/700x400" alt="bgResearch">
-                </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
                 </div>
             </div>
         </div>
